fixes and refactors

--- a/images/openstack/fs/openstack/common/etc/tempest.conf.tmpl
+++ b/images/openstack/fs/openstack/common/etc/tempest.conf.tmpl
@@ -1,12 +1,12 @@
 [DEFAULT]
 debug = True
-log_dir = /neutron_newton/logs
+log_dir = __DIR__/logs
 log_file = tempest.log
 use_stderr = False
 use_syslog = False
 
 [oslo_concurrency]
-lock_path = /neutron_newton/tempest_lock
+lock_path = __DIR__/tempest_lock
 
 [identity]
 auth_version = v2
